microk8s/backend-namespace.yaml
# backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
