microk8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sellinios/backend:20240720131903
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dockerhub-secret
