microk8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: sellinios/frontend:20240714103137
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/certs
          name: tls-certs
          readOnly: true
      volumes:
      - name: tls-certs
        secret:
          secretName: kairos-tls
