microk8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sellinios/frontend:20240721155224
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/certs
          name: tls-certs
          readOnly: true
      volumes:
      - name: tls-certs
        secret:
          secretName: kairos-tls
      imagePullSecrets:
        - name: dockerhub-secret
