microk8s/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: frontend
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
